# gizmo

./: .gitignore  Cargo.toml  README.md
assets/items/: skyrim.json
assets/maps/: forest.json  village.json
assets/scenes/: drugs.json  forest_hole.json  jake.json  mario.json  mike.json  shop.json  tabernacle.json  terrance.json  test.json
src/: components.rs  events.rs  items.rs  main.rs  maps.rs  pixels.rs  scenes.rs  static_commands.rs  systems.rs  types.rs  ui.rs  utils.rs
