[package]
name = "gizmo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.0", features = ["dynamic_linking", "file_watcher"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
